<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:fontFamily="@font/domine_bold"
           android:paddingTop="5dp"
           android:text="About Us"
           android:textColor="@color/black"
           android:textSize="30sp"
           android:textStyle="bold" />

       <ImageView
           android:layout_marginTop="@dimen/text_margin2"
           android:layout_width="match_parent"
           android:layout_height="220dp"
           android:id="@+id/college_image"
           android:src="@drawable/iet"
           android:scaleType="fitXY"/>


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/text_margin"
           android:layout_marginHorizontal="@dimen/text_margin"
           android:text="@string/about_college"
           android:textColor="@color/black"
           android:textSize="@dimen/text_size"
           android:textStyle="normal"
           android:fontFamily="@font/domine"
           android:layout_marginBottom="30dp"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="@dimen/text_margin">

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_label"
              />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/text_margin"
               android:text="Green Environment"/>
       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="36dp"
           android:text="BRANCHES"
           android:fontFamily="@font/domine_bold"
           android:textColor="@color/black"
           android:textSize="@dimen/title_size" />

       <androidx.viewpager.widget.ViewPager
           android:layout_width="match_parent"
           android:layout_height="250dp"
           android:layout_marginTop="@dimen/text_margin"
           android:foregroundGravity="center"
           android:clipToPadding="false"
           android:overScrollMode="never"
           android:id="@+id/viewPager"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="@dimen/text_margin">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="36dp"
               android:text="Contact Details"
               android:textColor="@color/black"
               android:textSize="@dimen/title_size"
               android:textStyle="bold"
               android:fontFamily="@font/domine"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/text_margin"
               android:layout_marginHorizontal="@dimen/text_margin"
               android:text="@string/college_name"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size"
               android:fontFamily="@font/domine"
               android:textStyle="normal"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/text_margin"
               android:layout_marginHorizontal="@dimen/text_margin"
               android:text="@string/college_email"
               android:textColor="@color/black"
               android:fontFamily="@font/domine"
               android:textSize="@dimen/text_size"
               android:textStyle="normal"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/text_margin"
               android:layout_marginHorizontal="@dimen/text_margin"
               android:text="@string/contact"
               android:textColor="@color/black"
               android:fontFamily="@font/domine"
               android:textSize="@dimen/text_size"
               android:textStyle="normal"/>

           <ImageView
               android:id="@+id/map"
               android:layout_width="wrap_content"
               android:layout_height="230dp"
               android:src="@drawable/map_iet"/>

       </LinearLayout>
   </LinearLayout>


</androidx.core.widget.NestedScrollView>