<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:text="IET DAVV"
                android:fontFamily="@font/domine_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:text="@string/home_page_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:fontFamily="@font/domine"
                android:textStyle="normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/light_grey">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="36dp"
                        android:text="DEPARTMENTS"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        android:fontFamily="@font/domine_bold"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/white">

                            <TextView
                                android:id="@+id/CS"
                                android:layout_width="match_parent"
                                android:textAlignment="center"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:background="@color/white"
                                android:fontFamily="@font/arvo"
                                android:text="Computer Science"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size"
                                android:textStyle="normal"
                                android:backgroundTint="@color/sky_blue"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey2"/>

                            <TextView
                                android:id="@+id/IT"
                                android:layout_width="match_parent"
                                android:textAlignment="center"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:background="@color/white"
                                android:fontFamily="@font/arvo"
                                android:text="Information Technology"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size"
                                android:textStyle="normal"
                                android:backgroundTint="@color/quantum_orange"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey2"/>


                            <TextView
                                android:id="@+id/ETC"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:textAlignment="center"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:background="@color/white"
                                android:fontFamily="@font/arvo"
                                android:text="Electronic and Telecommunication"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size"
                                android:textStyle="normal"
                                android:backgroundTint="@color/pink"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey2"/>


                            <TextView
                                android:id="@+id/Mech"
                                android:layout_width="match_parent"
                                android:textAlignment="center"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:background="@color/white"
                                android:fontFamily="@font/arvo"
                                android:text="Mechanical"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size"
                                android:textStyle="normal"
                                android:backgroundTint="@color/yellow" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey2"/>


                            <TextView
                                android:id="@+id/Civil"
                                android:layout_width="match_parent"
                                android:textAlignment="center"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:background="@color/white"
                                android:fontFamily="@font/arvo"
                                android:text="Civil"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size"
                                android:textStyle="normal"
                                android:backgroundTint="#C89C8B"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey2"/>


                            <TextView
                                android:id="@+id/EI"
                                android:layout_width="match_parent"
                                android:textAlignment="center"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:background="@color/white"
                                android:fontFamily="@font/arvo"
                                android:text="Instrumental Engineering"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size"
                                android:textStyle="normal"
                                android:backgroundTint="#FF9494"/>

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="36dp"
                    android:text="Contact Details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold"
                    android:fontFamily="@font/domine"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:text="@string/college_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/domine"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:text="@string/college_email"
                    android:textColor="@color/black"
                    android:fontFamily="@font/domine"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:text="@string/contact"
                    android:textColor="@color/black"
                    android:fontFamily="@font/domine"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:src="@drawable/map_iet"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</FrameLayout>